<?xml version="1.0"?>
<package format="2">
  <name>marble_husky_sensor_config_6</name>
  <version>0.1.0</version>
  <description>The marble_husky_sensor_config_6 package
    -For testing of IMX477
  </description>
  <maintainer email="fotheringhambrett@gmail.com">Brett A. Fotheringham</maintainer>
  <author email="dvasquez@ssci.com">Derek Vasquez</author>
  <author email="njohnson@ssci.com">Neil Johnson</author>
  <author email="hescobar@ssci.com">Hector Escobar</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
