<?xml version="1.0"?>
<package format="2">
  <name>x1_sensor_config_7</name>
  <version>0.1.0</version>
  <description>
    The x1_sensor_config_7 package derived from x1_sensor_config_3 (https://bitbucket.org/osrf/subt/wiki/robots) with the addition of 12 breadcrumbs.
  </description>
  <maintainer email="addisu@openrobotics.org">Addisu Z. Taddese</maintainer>
  <author email="addisu@openrobotics.org">Addisu Z. Taddese</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslaunch</buildtool_depend>
  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>xacro</buildtool_depend>

</package>
